--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "html-webpack-plugin": "^5.6.4",
+    "material-icons": "^1.13.14",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
