--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.5",
+    "@langchain/mcp-adapters": "^1.0.0",
+    "@langchain/openai": "^1.1.0",
     "@pulse-editor/react-api": "0.1.1-beta.56",
     "@pulse-editor/shared-utils": "0.1.1-beta.56",
     "cors": "^2.8.5",
@@ -24,6 +26,7 @@
     "express": "^5.1.0",
     "framer-motion": "^12.23.24",
     "html-webpack-plugin": "^5.6.4",
+    "langchain": "^1.0.4",
     "material-icons": "^1.13.14",
     "react": "19.2.0",
     "react-dom": "19.2.0"
